<resources>
    <string name="app_name">TestNexle</string>

    //Login
    <string name="title_login">Welcome to Entrance Test Interview!</string>
    <string name="subtitle_login">Please sign-in to your account and start the adventure</string>
    <string name="label_email">Email <font color="red">*</font></string>
    <string name="label_password">Password <font color="red">*</font></string>
    <string name="label_register">New on our platform? <font color="#7367F0">Create an account</font></string>
    <string name="label_forgot_password">Forgot Password</string>
    <string name="email_is_required">Email is required</string>
    <string name="email_is_validate">The email is valid</string>
    <string name="password_is_required">Password is required</string>
    <string name="remember_me">Remember me</string>
    <string name="login">Login</string>
    <string name="hint_password">* * * * * * *</string>
    <string name="hint_email">johndoe@gmail.com</string>

    //Register
    <string name="title_register">Adventure starts here</string>
    <string name="subtitle_register">Make your app management easy and fun!</string>
    <string name="label_first_name">First name <font color="red">*</font></string>
    <string name="label_last_name">Last name <font color="red">*</font></string>
    <string name="label_login">Already have an account? <font color="#7367F0">Sign in instead</font></string>
    <string name="first_name_is_required">First name is required</string>
    <string name="first_name_least_2_characters">The first name must be at least 2 characters</string>
    <string name="last_name_least_2_characters">The last name must be at least 2 characters</string>
    <string name="last_name_is_required">Last name is required</string>
    <string name="i_agree">i agree to <font color="#7367F0">privacy policy &amp; terms</font></string>
    <string name="register">Sign Up</string>
    <string name="hint_first_name">johndoe</string>
    <string name="hint_last_name">johndoe</string>
    <string name="password_length_validate">The password must be between 6–18 characters</string>
    <string name="password_format_validate">The password must contain at least one digit, one special character, and one letter</string>

    //Main
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="welcome">Welcome to Demo App</string>
</resources>