<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.example.test.nexle.ui.auth.viewmodel.AuthViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="16dp"
        android:paddingVertical="20dp"
        tools:viewBindingIgnore="true">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/title_register"
            android:textColor="@color/color_text_title"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/sub_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif"
            android:text="@string/subtitle_register"
            android:textColor="@color/color_text_subtitle"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/label_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif"
            android:text="@string/label_first_name"
            android:textColor="@color/color_text_subtitle"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sub_title" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_first_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/bg_et_auth"
            android:hint="@string/hint_first_name"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:textColor="@color/color_text_input"
            android:textColorHint="@color/color_hint"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/label_first_name" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/validate_first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:fontFamily="sans-serif"
            android:text="@{viewModel.firstNameValidateMessage}"
            android:textColor="@color/color_text_validate"
            android:textSize="12sp"
            android:visibility="@{viewModel.isValidateFirstName() ? View.VISIBLE : View.GONE}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_first_name" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/label_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif"
            android:text="@string/label_last_name"
            android:textColor="@color/color_text_subtitle"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_first_name" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_last_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/bg_et_auth"
            android:hint="@string/hint_last_name"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:textColor="@color/color_text_input"
            android:textColorHint="@color/color_hint"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/label_last_name" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/validate_last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:fontFamily="sans-serif"
            android:text="@{viewModel.lastNameValidateMessage}"
            android:textColor="@color/color_text_validate"
            android:textSize="12sp"
            android:visibility="@{viewModel.isValidateLastName() ? View.VISIBLE : View.GONE}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_last_name" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/label_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif"
            android:text="@string/label_email"
            android:textColor="@color/color_text_subtitle"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_last_name" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/bg_et_auth"
            android:hint="@string/hint_email"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:textColor="@color/color_text_input"
            android:textColorHint="@color/color_hint"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/label_email" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/validate_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:fontFamily="sans-serif"
            android:text="@{viewModel.emailValidateMessage}"
            android:textColor="@color/color_text_validate"
            android:textSize="12sp"
            android:visibility="@{viewModel.isValidateEmail()? View.VISIBLE: View.GONE}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_email" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/label_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif"
            android:text="@string/label_password"
            android:textColor="@color/color_text_subtitle"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_email" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/bg_et_auth"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:textColor="@color/color_text_input"
            android:textColorHint="@color/color_hint"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/label_password" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/validate_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:fontFamily="sans-serif"
            android:text="@{viewModel.passwordValidateMessage}"
            android:textColor="@color/color_text_validate"
            android:textSize="12sp"
            android:visibility="@{viewModel.isValidatePassword() ? View.VISIBLE : View.GONE}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_password" />

        <CheckBox
            android:id="@+id/cb_remember_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:fontFamily="sans-serif"
            android:text="@string/i_agree"
            android:textColor="@color/color_text_subtitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_password" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:background="@drawable/bg_button"
            android:fontFamily="sans-serif"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/cb_remember_me" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:fontFamily="sans-serif"
            android:text="@string/label_login"
            android:textColor="@color/color_text_subtitle"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_register" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>